# platform.core.appfw.vconf

./: AUTHORS  CMakeLists.txt  NOTICE  project.config  vconf-init  vconf-kdb.c  vconf-setup  vconf.c  vconf.manifest  vconf.pc.in  vconf.spec  vconftool.c
TC/: build.sh  execute.sh
TC/unit/: Makefile  tslist  utc_ApplicationFW_vconf_get_bool_func.c  utc_ApplicationFW_vconf_get_bytes_func.c  utc_ApplicationFW_vconf_get_dbl_func.c  utc_ApplicationFW_vconf_get_func.c  utc_ApplicationFW_vconf_get_int_func.c  utc_ApplicationFW_vconf_get_str_func.c  utc_ApplicationFW_vconf_ignore_key_changed_func.c  utc_ApplicationFW_vconf_keylist_add_bool_func.c  utc_ApplicationFW_vconf_keylist_add_dbl_func.c  utc_ApplicationFW_vconf_keylist_add_int_func.c  utc_ApplicationFW_vconf_keylist_add_null_func.c  utc_ApplicationFW_vconf_keylist_add_str_func.c  utc_ApplicationFW_vconf_keylist_del_func.c  utc_ApplicationFW_vconf_keylist_free_func.c  utc_ApplicationFW_vconf_keylist_get_bool_func.c  utc_ApplicationFW_vconf_keylist_lookup_func.c  utc_ApplicationFW_vconf_keylist_new_func.c  utc_ApplicationFW_vconf_keylist_nextnode_func.c  utc_ApplicationFW_vconf_keylist_rewind_func.c  utc_ApplicationFW_vconf_keynode_get_bool_func.c  utc_ApplicationFW_vconf_keynode_get_dbl_func.c  utc_ApplicationFW_vconf_keynode_get_int_func.c  utc_ApplicationFW_vconf_keynode_get_name_func.c  utc_ApplicationFW_vconf_keynode_get_str_func.c  utc_ApplicationFW_vconf_keynode_get_type_func.c  utc_ApplicationFW_vconf_keynode_steal_str_func.c  utc_ApplicationFW_vconf_notify_key_changed_func.c  utc_ApplicationFW_vconf_set_bool_func.c  utc_ApplicationFW_vconf_set_bytes_func.c  utc_ApplicationFW_vconf_set_dbl_func.c  utc_ApplicationFW_vconf_set_func.c  utc_ApplicationFW_vconf_set_int_func.c  utc_ApplicationFW_vconf_set_str_func.c  utc_ApplicationFW_vconf_sync_key_func.c  utc_ApplicationFW_vconf_unset_func.c  utc_ApplicationFW_vconf_unset_recursive_func.c  utc_MODULE_API_func.c.in
debian/: changelog  control  libvconf-0.install.in  libvconf-0.postinst.in  libvconf-dev.install.in  libvconf-keys-dev.install.in  rules
include/: CMakeLists.txt  SLP_vconf_PG.h  test-vconf-headers.c  vconf-internals.h  vconf-keys.h  vconf-log.h  vconf.h
packaging/: vconf-setup.conf  vconf-setup.service  vconf.changes  vconf.manifest  vconf.spec
test/: Makefile  vconf_notitest.c  vconf_timecheck.c  vconf_unit_test.c
